# sarif_cli

./: Cargo.toml  README.md  build.rs
src/: main.rs
tests/: flexarray.sarif  test.c  test.sarif
