[package]
name = "sarif_cli"
version = "0.1.0"
edition = "2021"
authors = ["Jordy Zomer <jordy@pwning.systems>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.4"
tree-sitter-c = "0.20.1"
colored = "2"
serde_json = "1.0.78"

[build-dependencies]
cc="*"
